<resources>
    <string name="app_name">NYTimes</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="new_york_times">New York Times</string>
    <string name="network_unavailable">Network Unavailable</string>
    <string name="begin_date">Begin date</string>
    <string name="sort_order">Sort Order</string>
    <string name="news_desk_value">Category</string>
    <string name="arts">Arts</string>
    <string name="fashion_and_style">Fashion and Style</string>
    <string name="sports">Sports</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="search_filter">Search Filter</string>
    <string name="set_date">Set Date</string>

    <string-array name="article_search_filter_sort_order_array">
        <item>Relevance</item>
        <item>Newest</item>
        <item>Oldest</item>
    </string-array>
</resources>
